# FastWeb

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_06_1948-79536bcaaafd_create_product_table.py  2024_08_06_2012-264214da8257_create_users_table.py  2024_08_06_2030-bea97406e828_create_posts_table.py  2024_08_07_1123-7a189bf08aba_create_profile_table.py  2024_08_13_1510-1aebbf41bc33_create_order_table.py  2024_08_13_1535-a216167fd033_create_order_product_association_table.py  2024_08_15_1724-c6c60ba4644e_create_column_unit_price.py
api_v1/: __init__.py
api_v1/demo_auth/: __init__.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixin.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
