[tool.poetry]
name = "fastweb"
version = "0.1.0"
description = ""
authors = ["stepashka <cociorvastefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
black = "^24.4.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"